test/chainsaw/authpolicy/multiple_providers/application.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: application
spec:
  image: hashicorp/http-echo:latest
  port: 5678
  replicas: 1
  ingresses:
    - foo.bar
  accessPolicy:
    outbound:
      rules:
        - application: mock-oauth2
          namespace: auth
