test/chainsaw/authpolicy/multiple_providers/authpolicy-assert.yaml
# RequestAuthentication
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: auth-policy
spec:
  jwtRules:
    - audiences:
        - idporten_server
      forwardOriginalToken: true
      issuer: https://fake.auth/idporten
      jwksUri: http://mock-oauth2.auth:8080/idporten/jwks
    - audiences:
        - maskinporten_server
      forwardOriginalToken: true
      issuer: https://fake.auth/maskinporten
      jwksUri: http://mock-oauth2.auth:8080/maskinporten/jwks
    - audiences:
        - entraid_server
      forwardOriginalToken: true
      issuer: https://fake.auth/entraid
      jwksUri: http://mock-oauth2.auth:8080/entraid/jwks
  selector:
    matchLabels:
      app: application
---
# AuthorizationPolicy (ignore-auth)
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-policy-ignore-auth
spec:
  rules:
    - to:
        - operation:
            notPaths:
              - /idporten/secure
              - /maskinporten/secure
              - /entraid/secure
            paths:
              - /idporten/public
        - operation:
            methods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            notPaths:
              - /idporten/secure
              - /maskinporten/secure
              - /entraid/secure
            paths:
              - /maskinporten/secure
        - operation:
            methods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            notPaths:
              - /idporten/secure
              - /maskinporten/secure
              - /entraid/secure
            paths:
              - /entraid/secure
        - operation:
            notPaths:
              - /idporten/secure
              - /maskinporten/secure
              - /entraid/secure
            paths:
              - /maskinporten/public
        - operation:
            methods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            notPaths:
              - /idporten/secure
              - /maskinporten/secure
              - /entraid/secure
            paths:
              - /idporten/secure
        - operation:
            methods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            notPaths:
              - /idporten/secure
              - /maskinporten/secure
              - /entraid/secure
            paths:
              - /entraid/secure
        - operation:
            notPaths:
              - /idporten/secure
              - /maskinporten/secure
              - /entraid/secure
            paths:
              - /entraid/public
        - operation:
            methods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            notPaths:
              - /idporten/secure
              - /maskinporten/secure
              - /entraid/secure
            paths:
              - /idporten/secure
        - operation:
            methods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            notPaths:
              - /idporten/secure
              - /maskinporten/secure
              - /entraid/secure
            paths:
              - /maskinporten/secure
        - operation:
            notMethods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            paths:
              - /idporten/secure
        - operation:
            notMethods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            paths:
              - /maskinporten/secure
        - operation:
            notMethods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            paths:
              - /entraid/secure
  selector:
    matchLabels:
      app: application
---
# AuthorizationPolicy (require-auth)
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-policy-require-auth
spec:
  rules:
    - to:
        - operation:
            notPaths:
              - /idporten/secure
              - /idporten/public
              - /maskinporten/secure
              - /entraid/secure
            paths:
              - '*'
        - operation:
            notMethods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            paths:
              - /idporten/secure
        - operation:
            notMethods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            paths:
              - /idporten/public
        - operation:
            notMethods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            paths:
              - /maskinporten/secure
        - operation:
            notMethods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            paths:
              - /entraid/secure
      when:
        - key: request.auth.claims[iss]
          values:
            - https://fake.auth/idporten
        - key: request.auth.claims[aud]
          values:
            - idporten_server
    - to:
        - operation:
            paths:
              - /idporten/secure
      when:
        - key: request.auth.claims[iss]
          values:
            - https://fake.auth/idporten
        - key: request.auth.claims[aud]
          values:
            - idporten_server
        - key: request.auth.claims[role]
          values:
            - idporten_role
    - to:
        - operation:
            notPaths:
              - /maskinporten/secure
              - /maskinporten/public
              - /idporten/secure
              - /entraid/secure
            paths:
              - '*'
        - operation:
            notMethods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            paths:
              - /maskinporten/secure
        - operation:
            notMethods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            paths:
              - /maskinporten/public
        - operation:
            notMethods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            paths:
              - /idporten/secure
        - operation:
            notMethods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            paths:
              - /entraid/secure
      when:
        - key: request.auth.claims[iss]
          values:
            - https://fake.auth/maskinporten
        - key: request.auth.claims[aud]
          values:
            - maskinporten_server
    - to:
        - operation:
            paths:
              - /maskinporten/secure
      when:
        - key: request.auth.claims[iss]
          values:
            - https://fake.auth/maskinporten
        - key: request.auth.claims[aud]
          values:
            - maskinporten_server
        - key: request.auth.claims[role]
          values:
            - maskinporten_role
    - to:
        - operation:
            notPaths:
              - /entraid/secure
              - /entraid/public
              - /idporten/secure
              - /maskinporten/secure
            paths:
              - '*'
        - operation:
            notMethods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            paths:
              - /entraid/secure
        - operation:
            notMethods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            paths:
              - /entraid/public
        - operation:
            notMethods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            paths:
              - /idporten/secure
        - operation:
            notMethods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            paths:
              - /maskinporten/secure
      when:
        - key: request.auth.claims[iss]
          values:
            - https://fake.auth/entraid
        - key: request.auth.claims[aud]
          values:
            - entraid_server
    - to:
        - operation:
            paths:
              - /entraid/secure
      when:
        - key: request.auth.claims[iss]
          values:
            - https://fake.auth/entraid
        - key: request.auth.claims[aud]
          values:
            - entraid_server
        - key: request.auth.claims[role]
          values:
            - entraid_role
  selector:
    matchLabels:
      app: application
