test/chainsaw/authpolicy/multiple_providers/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: multiple-providers
spec:
  skip: false
  concurrent: true
  skipDelete: false
  namespaceTemplate:
    metadata:
      labels:
        istio-injection: enabled
  steps:
    - try:
        - create:
            file: application.yaml
        - apply:
            file: wildcard-ingress.yaml
        - assert:
            file: application-assert.yaml
        - create:
            file: authpolicy.yaml
        - assert:
            file: authpolicy-assert.yaml
        - script:
            content: sleep 10
        - script:
            content: |
              hurl --error-format long \
              --insecure --test tests.hurl \
              --variable idporten_token="$(../../../../venv/bin/python ./../../../../scripts/get-mock-oauth2-token.py --issuer idporten --code idporten_code)" \
              --variable maskinporten_token="$(../../../../venv/bin/python ./../../../../scripts/get-mock-oauth2-token.py --issuer maskinporten --code maskinporten_code)" \
              --variable entraid_token="$(../../../../venv/bin/python ./../../../../scripts/get-mock-oauth2-token.py --issuer entraid --code entraid_client)"
